# src/main/scala/org/openapitools/server/model/IdentifierNotification.scala
@@ -1,0 +1,13 @@
+package org.openapitools.server.model
+
+import java.util.Date
+
+/**
+ * @param delivered      for example: ''null''
+ * @param `notification` for example: ''null''
+ */
+final case class IdentifierNotification(
+                                         delivered: Boolean,
+                                         notification: Notification
+                                       )
+
